--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -26,6 +26,14 @@
             android:layout_height="match_parent">
 
         </ImageView>
+
+        <ProgressBar
+            android:id="@+id/imageProgress"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </ProgressBar>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
