changed endpoints, Added ViewModels and price in details

--- a/app/src/main/res/layout/fragment_favorite_prods.xml
+++ b/app/src/main/res/layout/fragment_favorite_prods.xml
@@ -21,7 +21,7 @@
 
     <Button
         android:id="@+id/deleteAllButton"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#FF3F31"
