--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginBottom="24dp"
                 android:layout_marginEnd="24dp"
-                android:backgroundTint="@color/hunahpuGreen"
+                android:backgroundTint="#5899E2"
                 android:src="@drawable/ic_barcode"
                 app:tint="@color/white"
                 >
