--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4DA51D"
+    android:background="#274060"
     tools:context=".iu.views.ProductDetails">
 
     <androidx.cardview.widget.CardView
@@ -29,9 +29,9 @@
 
         <ProgressBar
             android:id="@+id/imageProgress"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
         </ProgressBar>
     </androidx.cardview.widget.CardView>
@@ -41,10 +41,10 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:background="@drawable/rounded_corner"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="vertical"
         app:layout_constraintVertical_bias="1">
 
         <TextView
@@ -58,119 +58,127 @@
             android:text="@string/app_name"
             android:textColor="@color/greyText"
             android:textSize="20sp"></TextView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/sorianaLogo"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_launcher_background">
+                    android:src="@drawable/ic_soriana">
 
                 </ImageView>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=":"
-                    android:textColor="@color/greyText"
-                    android:textSize="15sp"
                     android:layout_gravity="center"
                     android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp">
-                </TextView>
+                    android:layout_marginEnd="4dp"
+                    android:text=":"
+                    android:textColor="@color/greyText"
+                    android:textSize="15sp"></TextView>
 
                 <TextView
                     android:id="@+id/sorianaPrice"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/greyText"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                </TextView>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/greyText"
+                    android:textSize="16sp"></TextView>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/hebLogo"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_launcher_background">
+                    android:src="@drawable/ic_heb">
 
                 </ImageView>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=":"
-                    android:textColor="@color/greyText"
-                    android:textSize="15sp"
                     android:layout_gravity="center"
                     android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp">
-                </TextView>
+                    android:layout_marginEnd="4dp"
+                    android:text=":"
+                    android:textColor="@color/greyText"
+                    android:textSize="15sp"></TextView>
 
                 <TextView
                     android:id="@+id/hebPrice"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/greyText"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                </TextView>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/greyText"
+                    android:textSize="16sp"></TextView>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/waltmartLogo"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_launcher_background">
+                    android:src="@drawable/ic_waltmart">
 
                 </ImageView>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=":"
-                    android:textColor="@color/greyText"
-                    android:textSize="15sp"
                     android:layout_gravity="center"
                     android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp">
-                </TextView>
+                    android:layout_marginEnd="4dp"
+                    android:text=":"
+                    android:textColor="@color/greyText"
+                    android:textSize="15sp"></TextView>
 
                 <TextView
                     android:id="@+id/waltmartPrice"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/greyText"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                </TextView>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/greyText"
+                    android:textSize="16sp"></TextView>
             </LinearLayout>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/latestUpdate"
+            android:textSize="16sp"
+            android:textColor="@color/greyText"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"></TextView>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -179,7 +187,6 @@
         android:layout_height="55dp"
         android:backgroundTint="#B38C72"
         android:src="@drawable/ic_favorite"
-        app:tint = "@color/white"
         app:backgroundTint="#B38C72"
         app:layout_anchorGravity="end|bottom"
         app:layout_constraintBottom_toBottomOf="@id/cardviewImage"
@@ -187,7 +194,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardviewImage"
         app:layout_constraintVertical_bias=".95"
-        app:maxImageSize="50dp">
+        app:maxImageSize="50dp"
+        app:tint="@color/white">
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
