--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".iu.views.MainActivity">
+    android:orientation="vertical"
+    android:background="@drawable/ic_pasillo"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#405899E2"
+        tools:context=".iu.views.MainActivity">
 
-    <TextView
-        android:id="@+id/welcomeTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign-In"
-        android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".10" />
 
-    <Button
-        android:id="@+id/googleBtn"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textAllCaps="false"
-        android:text="@string/googleSignIn"
-        android:textColor="#8C8888"
-        android:backgroundTint="@color/white"
-       >
+        <TextView
+            android:id="@+id/welcomeTxt"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
+            android:text="Inicio de sesión"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:background="@drawable/oval_corner"
+            android:textSize="26sp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias=".10" />
 
-    </Button>
+        <Button
+            android:id="@+id/googleBtn"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="@string/googleSignIn"
+            android:textColor="#8C8888"
+            android:backgroundTint="@color/white"
+            >
 
-    <Button
-        android:id="@+id/purplelogout"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/googleBtn"
-        android:text="@string/facebookSignIn"
-        android:backgroundTint="#4267B2"
-        android:textAllCaps="false"
-        app:layout_constraintVertical_bias=".08"
-        android:drawableStart="@drawable/ic_launcher_foreground"
-        android:elevation="5dp"
-        >
+        </Button>
 
-    </Button>
+        <Button
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:id="@+id/purplelogout"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/googleBtn"
+            android:text="@string/facebookSignIn"
+            android:backgroundTint="#4267B2"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            app:layout_constraintVertical_bias=".08"
+            android:drawableStart="@drawable/ic_launcher_foreground"
+            android:elevation="5dp"
+            >
+
+        </Button>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
